[package]
name = "cartographer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geojson = { version = "0.24.0", features = ["geo-types"] }
geo-types = "0.7.7"
geo = "0.23.0"
plotters = "0.3.1"
rand = "0.8.5"
axum = "0.5.16"
tokio = { version = "1.21.1", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"