[package]
name = "pinpointer"
version = "0.1.3"
edition = "2021"
authors = ["kpberry"]
description = "Gets provinces and countries from latitudes and longitudes."
license = "MIT"
homepage = "https://github.com/kpberry/pinpointer"
documentation = "https://docs.rs/pinpointer"

[lib]
path = "src/lib.rs"
name = "pinpointer"

[[bin]]
path = "src/main.rs"
name = "pinpointer-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geojson = { version = "0.24.1", features = ["geo-types"] }
geo-types = "0.7.10"
geo = "0.25.1"
plotters = "0.3.1"
rand = "0.8.5"
axum = "0.5.16"
tokio = { version = "1.21.1", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11.18", features = ["blocking"] }
